# stock_price_assignment

./: README.md
dagster_project/stock_price/: README.md  pyproject.toml  setup.cfg  setup.py
dagster_project/stock_price/stock_price/: assets.py  definitions.py
dagster_project/stock_price/tmpp41_dswt/history/: runs.db
dagster_project/stock_price/tmpp41_dswt/history/runs/: index.db
dagster_project/stock_price/tmpp41_dswt/schedules/: schedules.db
scrapy_project/spider/spider/spiders/: stock_price.py
